ax25: Add a way to ignore a UA while connected
Fix a problem when talking to some other systems that do not properly
implement the spec.  If they send a UA, that means they need to reset
their sequence numbers and start over, but some don't do that.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -1789,6 +1789,12 @@ sent to this address.
 .B crc[=yes|no]
 Enable CRC checking.  Default is off.
 .TP
+.B ign_emb_ua[=yes|no]
+Some AX.25 stacks do not properly reset themselves when they get a
+second SABM (due to a timeout) but they still send a UA.  If you are
+getting errors about receiving a UA while connected and the connection
+hangs, try enabling this option.
+.TP
 .B srt=<n>
 The initial smoothed round trip time for the connection.  See the spec
 for details, you probably don't need to mess with it.
