--- a/tools/gtlssh-keygen.1
+++ b/tools/gtlssh-keygen.1
@@ -91,6 +91,9 @@ default is rsa.
 Don't ask any questions, just force the operations.  Be careful, this
 will overwrite data without asking.
 .TP
+.I \-\-version
+Print the version number and exit.
+.TP
 .I \-h|\-\-help
 Help output
 .SH "COMMAND"
