--- a/tools/gtlssh.1
+++ b/tools/gtlssh.1
@@ -109,6 +109,9 @@ Do IPv6 only.
 .I \-d|\-\-debug
 Generate debugging output.  Specifying more than once increases the output.
 .TP
+.I \-\-version
+Print the version number and exit.
+.TP
 .I \-h|\-\-help
 Help output
 
