--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -124,6 +124,9 @@ Do IPv6 only.
 Generate debugging output.  Specifying more than once increases the output.
 This also causes syslog output to go to standard error.
 .TP
+.I \-\-version
+Print the version number and exit.
+.TP
 .I \-h|\-\-help
 Help output
 
