tools:gtlsshd: Rework login and pam handling
Since we are using pam, login is not required, directly execute the
shell in a pty.

pam_open_session() needed to be called, along with pam_close_session().
pam_close_session() cleans up credentials, so no need to clean those up
ourselves.

nologin is handled by pam, don't do it in gtlssh.

Fix the handling of interactive logins.  Only generate login output if
we are logging in interactively.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -98,8 +98,10 @@ received.  This allows easier debugging of the program.
 Do not daemonize (double fork) the program.
 .TP
 .I \-\-nointeractive
-Disable interactive logins.  All authentication information must be passed
-in via the protocol.
+Disable interactive logins.  All authentication information must be
+passed in via the protocol.  This is different than gtlssh's view of
+interactive, which affects how I/O is done.  This only affects
+prompting for credentials interactively.
 .TP
 .I \-\-nosctp
 Disable SCTP support.
