tools:gtlssh: Hack around windows file issues
Logging on without a password on Windows really doesn't work properly.
It kind of works, but there are issues.

So, allow the user to put their password in the .gtlssh directory that
can be fetched by gtlsshd to log them in.  Not ideal, but better than
nothing.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlssh.1
+++ b/tools/gtlssh.1
@@ -15,7 +15,9 @@ using SSL, then authenticates itself with the server.
 .BR gtlsshd
 will attempt an SCTP connection first, and fall back to TCP if that
 doesn't work.
-
+.SH WINDOWS HACKS
+See "WINDOWS HACKS" in the gtlssh-keygen.1 man page for information
+about special windows configuration.
 .SH OPTIONS
 .TP
 .I \-p|\-\-port port
