--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -28,7 +28,9 @@ authenticate a certificate the user presents.  If the user doesn't
 have a certificate that matches the presented certificate,
 .BR gtlsshd
 will attempt a normal password login if that is enabled.
-
+.SH WINDOWS HACKS
+See "WINDOWS HACKS" in the gtlssh-keygen.1 man page for information
+about special windows configuration.
 .SH TWO-FACTOR AUTHENTICATION
 .BR gtlsshd
 supports two-factor authentication in a number of ways.  The certauth
