--- a/tools/gtlssh-keygen.1
+++ b/tools/gtlssh-keygen.1
@@ -61,6 +61,17 @@ abc.my.domain.
 You can also add ports to the key generation, and it will only use it
 if you connect to the specific target on the specific port.  This
 could be useful for ser2net.
+.SH WINDOWS HACKS
+gtlsshd will work on Windows, and it will sort of work without a
+password, but certain things will not work as the logon has no stored
+credentials, and it is unable to create a linked token for admin
+logins so you can't do admin things.
+
+To work around this issue and still allow certificate logins, you can
+use the storepw command of gtlssh-keygen to store your password in
+your .gtlssh directory.  This is not ideal, but your private keys are
+there, anyway, so it's not a huge thing.  Administrators on your
+system will be able to look at your password, so be warned.
 .SH OPTIONS
 .TP
 .I \-\-keysize size
@@ -147,6 +158,10 @@ the certificate manually.  By default the credential on the remote
 host is named the output of 'hostname -f' on the local machine,
 .I -n
 overrides this.
+.TP
+.I storepw
+Windows only, see "WINDOW HACKS" above for details. Prompts for your
+password to store in your .gtlssh directory.
 .TP
 .I serverkey
 Create keys for the server, generally in /etc/gtlssh/gtlsshd.key and
