man: Fix some \ issues
Need to be \\, no \, to work in a man page.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -1663,12 +1663,12 @@ string before continuing operation.
 .B d710[=yes|no]
 If set to yes or just "d710" is given, set the setupstr to a value for
 the Kenwood D710 radio.  This is the same as doing:
-setupstr='xflow on\rhbaud 1200\rkiss on\rrestart\r'
+setupstr='xflow on\\rhbaud 1200\\rkiss on\\rrestart\\r'
 .TP
 .B d710-9600[=yes|no]
 If set to yes or just "d710-9600" is given, set the setupstr to a
 value for the Kenwood D710 radio at 9600 bps.  This is the same as
-doing: setupstr='xflow on\rhbaud 9600\rkiss on\rrestart\r'
+doing: setupstr='xflow on\\rhbaud 9600\\rkiss on\\rrestart\\r'
 .TP
 .B txdelay=<n>
 The KISS txdelay parameter, in milliseconds, rounded to the nearest
