tools:gsound: Add help and man page
Also, adjust the gensio.5 man page to refer to gsound.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -2000,11 +2000,11 @@ interfaces are available.
 The device is specified on the command line.  The name is
 system-dependent.  For alsa, the name must match exactly.  You can use
 "aplay -L" or "arecord -L" to list input and output devices available.
-Or you can use the "examples/sound -L" program in the gensio.
+Or you can use the "gsound -L" program.
 
 For Windows, the name just has to match the first part of the device's
 name.  Windows names always start with a number.  So, for instance, if
-the output of "examples/sound -L" on your windows platform is:
+the output of "gsound -L" on your windows platform is:
 .IP
     0:Microphone (Realtek(R) Audio)     input,inchans=2
 .br
